# symbol-grounding-test

./: README.md  __init__.py  diffusion_interface.py  layout.py  pipeline.py  pyproject.toml  requirements.txt  scene_graph.py  slot_attention.py  tpr.py  typed_slots.py  utils.py
configs/: disentangled_vae.json  disentangled_vae_real.json  grammar_vae.json  multimodal_slot_ae.json  slot_ae.json
configs/experiments/: bench_v1_color.json  locality_demo.json  locality_semantic_demo.json
outputs/locality_batch/: edit_a_blue_cat_20260117_204245_seed0_metrics.json  edit_a_blue_cat_20260117_213546_seed0_metrics.json
scripts/: __init__.py  generate_image.py
symbol_grounding/: __init__.py  attention_control.py  diffusion_interface.py  disentangled_vae.py  grammar_vae.py  layout.py  llm_scene_graph.py  multimodal_slot_attention.py  pipeline.py  pipeline_diffusion.py  pipeline_grounded_diffusion.py  pipeline_llm_grounded_diffusion.py  scene_graph.py  slot_attention.py  slot_tpr_pipeline.py  system2_pipeline.py  text_encoder.py  tpr.py  typed_slots.py  utils.py
symbol_grounding.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
symbol_grounding/backends/: __init__.py  diffusers_backend.py
symbol_grounding/data/: __init__.py  captioned_shapes.py  image_folder.py  synthetic_shapes.py
tests/: test_aggregate_semantic_delta.py  test_layout.py  test_layout_mask.py  test_locality_eval.py  test_plot_suite_parse.py  test_report_suite.py  test_run_suite_index.py  test_scene_graph.py  test_semantic_bbox.py  test_tpr_binding.py  test_typed_slots.py
(+276 files in other folders)
